# ComfyUI-MotionCapture

./: .gitignore  README.md  __init__.py  blender_config.example.yaml  install.py  pyproject.toml  requirements.txt
lib/: blender_addon_installer.py  blender_animate_smpl.py  blender_config.py  mhr_skeleton.py
nodes/: bvh_loader_node.py  bvh_retarget_node.py  compare_smpl_bvh_node.py  fbx_loader_node.py  load_smpl_node.py  mhr_to_bvh_node.py  mhr_to_fbx_node.py  retarget_node.py  smpl_retarget_node.py  smpl_to_bvh_nocollar.py  smpl_to_bvh_node.py  smpl_to_bvh_tpose.py
web/: bvh_viewer.js  compare_smpl_bvh.js  fbx_animation_viewer.js
