[project]
name = "comfyui-motioncapture"
description = "Motion Capture nodes for ComfyUI: SMPL data/retargeting using GVHMR. This node is a very first draft, putting it out there in the hope some blender whizzes can help me figure out retargeting *prayer emoji*"
version = "0.0.6"
license = {file = "LICENSE"}
requires-python = ">=3.10"

# Standard dependencies that can be installed via pip
# CUDA-specific packages (spconv, torch-scatter, torch-cluster) are handled by install.py
dependencies = [
    # ─── Core computation ─────────────────────────
    "numpy>=1.23.0,<2.0.0",
    "scipy",
    "einops",
    "rich",
    "termcolor",
    "joblib",

    # ─── Training/inference frameworks ────────────
    "timm>=0.9.0",
    "lightning>=2.0.0",
    "hydra-core>=1.3",
    "hydra-zen",
    "hydra-colorlog",

    # ─── Computer vision ──────────────────────────
    "opencv-python",
    "scikit-image",
    "imageio>=2.34",
    "av>=13.0.0",
    "ffmpeg-python",

    # ─── 3D mesh + SMPL models ────────────────────
    "trimesh",
    "smplx",
    "chumpy-fork",
    "pycolmap",

    # ─── Motion / BVH handling ────────────────────
    "bvh>=0.3",

    # ─── 2D pose estimation ───────────────────────
    "cython-bbox",
    "lapx",

    # ─── Model downloads ──────────────────────────
    "huggingface-hub>=0.20.0",
    "gdown>=4.7.0",

    # ─── SAM 3D Body dependencies ─────────────────
    "roma>=1.3.0",
    "dill>=0.3.6",
    "fvcore>=0.1.5",
    "transformers>=4.30.0",
    "braceexpand",
    "webdataset>=0.2.0",
    "loguru>=0.7.0",
    "optree>=0.9.0",
    "pyrootutils>=1.0.4",
    "iopath>=0.1.7",
    "tabulate",
    "portalocker",

    # ─── Utility deps ─────────────────────────────
    "tqdm",
    "addict",
    "omegaconf",
    "yacs",
    "setuptools>=68.0",
]

[project.urls]
Repository = "https://github.com/danielvw/ComfyUI-MotionCapture"
Documentation = "https://github.com/danielvw/ComfyUI-MotionCapture#readme"
"Bug Tracker" = "https://github.com/danielvw/ComfyUI-MotionCapture/issues"

# ComfyUI Registry configuration
[tool.comfy]
PublisherId = "pznodes"
DisplayName = "MotionCapture"
Icon = ""
